# shared/contracts/openapi.yaml
@@ -3,6 +3,27 @@ info:
   title: Layba API
   version: 0.1.0
 paths:
+  /api/notifications/settings/:
+    get:
+      operationId: api_notifications_settings_retrieve
+      tags:
+      - api
+      security:
+      - cookieAuth: []
+      - {}
+      responses:
+        '200':
+          description: No response body
+    put:
+      operationId: api_notifications_settings_update
+      tags:
+      - api
+      security:
+      - cookieAuth: []
+      - {}
+      responses:
+        '200':
+          description: No response body
   /api/schema:
     get:
       operationId: api_schema_retrieve
@@ -127,7 +148,6 @@ paths:
       - api
       security:
       - cookieAuth: []
-      - basicAuth: []
       - {}
       responses:
         '200':
@@ -149,11 +169,337 @@ paths:
                 type: object
                 additionalProperties: {}
           description: ''
+  /auth/../api/notifications/settings/:
+    get:
+      operationId: auth_.._api_notifications_settings_retrieve
+      tags:
+      - auth
+      security:
+      - cookieAuth: []
+      - {}
+      responses:
+        '200':
+          description: No response body
+    put:
+      operationId: auth_.._api_notifications_settings_update
+      tags:
+      - auth
+      security:
+      - cookieAuth: []
+      - {}
+      responses:
+        '200':
+          description: No response body
+  /auth/csrf/:
+    get:
+      operationId: auth_csrf_retrieve
+      tags:
+      - auth
+      responses:
+        '200':
+          description: No response body
+  /auth/email/confirm:
+    post:
+      operationId: auth_email_confirm_create
+      tags:
+      - auth
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/EmailConfirmIn'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/EmailConfirmIn'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/EmailConfirmIn'
+        required: true
+      security:
+      - cookieAuth: []
+      - {}
+      responses:
+        '200':
+          description: OK
+        '400':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: ''
+        '401':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: ''
+        '410':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: ''
+        '429':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: ''
+  /auth/email/send_code:
+    post:
+      operationId: auth_email_send_code_create
+      tags:
+      - auth
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/EmailSendCodeIn'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/EmailSendCodeIn'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/EmailSendCodeIn'
+        required: true
+      security:
+      - cookieAuth: []
+      - {}
+      responses:
+        '204':
+          description: No Content
+        '400':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: ''
+        '429':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: ''
+  /auth/phone/send_code:
+    post:
+      operationId: auth_phone_send_code_create
+      tags:
+      - auth
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PhoneSendCodeIn'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/PhoneSendCodeIn'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/PhoneSendCodeIn'
+        required: true
+      security:
+      - cookieAuth: []
+      - {}
+      responses:
+        '204':
+          description: No Content
+        '400':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: ''
+        '429':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: ''
+  /auth/phone/verify:
+    post:
+      operationId: auth_phone_verify_create
+      tags:
+      - auth
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PhoneVerifyIn'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/PhoneVerifyIn'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/PhoneVerifyIn'
+        required: true
+      security:
+      - cookieAuth: []
+      - {}
+      responses:
+        '200':
+          description: OK
+        '400':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: ''
+        '401':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: ''
+        '410':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: ''
+        '429':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: ''
+  /auth/session/login:
+    post:
+      operationId: auth_session_login_create
+      tags:
+      - auth
+      responses:
+        '200':
+          description: No response body
+  /auth/session/logout:
+    post:
+      operationId: auth_session_logout_create
+      tags:
+      - auth
+      security:
+      - cookieAuth: []
+      - {}
+      responses:
+        '200':
+          description: No response body
+  /auth/social/apple:
+    post:
+      operationId: auth_social_apple_create
+      tags:
+      - auth
+      security:
+      - cookieAuth: []
+      - {}
+      responses:
+        '200':
+          description: No response body
+  /auth/social/facebook:
+    post:
+      operationId: auth_social_facebook_create
+      tags:
+      - auth
+      security:
+      - cookieAuth: []
+      - {}
+      responses:
+        '200':
+          description: No response body
+  /auth/social/google:
+    post:
+      operationId: auth_social_google_create
+      tags:
+      - auth
+      security:
+      - cookieAuth: []
+      - {}
+      responses:
+        '200':
+          description: No response body
+  /profile/me:
+    get:
+      operationId: profile_me_retrieve
+      tags:
+      - profile
+      security:
+      - cookieAuth: []
+      responses:
+        '200':
+          description: No response body
 components:
+  schemas:
+    EmailConfirmIn:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+        code:
+          type: string
+          maxLength: 6
+          minLength: 6
+      required:
+      - code
+      - email
+    EmailSendCodeIn:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+      required:
+      - email
+    Error:
+      type: object
+      description: |-
+        {
+          "code": "string",
+          "message": "string",
+          "details": { ... },
+          "request_id": "uuid-or-empty"
+        }
+      properties:
+        code:
+          type: string
+        message:
+          type: string
+        details:
+          type: object
+          additionalProperties: {}
+        request_id:
+          type: string
+      required:
+      - code
+      - message
+    MethodEnum:
+      enum:
+      - sms
+      - call
+      type: string
+      description: |-
+        * `sms` - sms
+        * `call` - call
+    PhoneSendCodeIn:
+      type: object
+      properties:
+        phone:
+          type: string
+        method:
+          $ref: '#/components/schemas/MethodEnum'
+      required:
+      - method
+      - phone
+    PhoneVerifyIn:
+      type: object
+      properties:
+        phone:
+          type: string
+        code:
+          type: string
+        last4:
+          type: string
+          maxLength: 4
+      required:
+      - phone
   securitySchemes:
-    basicAuth:
-      type: http
-      scheme: basic
     cookieAuth:
       type: apiKey
       in: cookie
